Code reformatting phase 2 up to io section of code
Made some changes to cmake and formatted a bunch of code that makes it look much cleaner.  The lights folder is the next place to continue reformatting.  Added some defines to turn on or off shader model 6_5 features in dxr shader code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,17 +43,17 @@ FILE(GLOB PROCEDURAL_HEADER_FILES   ${CMAKE_SOURCE_DIR}/procedural/include/*.h)
 FILE(GLOB RENDERER_HEADER_FILES     ${CMAKE_SOURCE_DIR}/renderer/include/*.h)
 FILE(GLOB EFFECTS_HEADER_FILES      ${CMAKE_SOURCE_DIR}/effects/include/*.h)
 FILE(GLOB TEXTURE_HEADER_FILES      ${CMAKE_SOURCE_DIR}/texture/include/*.h)
-FILE(GLOB IO_HEADER_FILES 		    ${CMAKE_SOURCE_DIR}/io/include/*.h)
-FILE(GLOB LIGHTS_HEADER_FILES 	    ${CMAKE_SOURCE_DIR}/lights/include/*.h)
-FILE(GLOB GLSL_SHADER_FILES 	   	${CMAKE_SOURCE_DIR}/shading/shaders/glsl/*)
-FILE(GLOB HLSL_SHADER_FILES 	   	${CMAKE_SOURCE_DIR}/shading/shaders/hlsl/*)
-FILE(GLOB VIEW_HEADER_FILES 	    ${CMAKE_SOURCE_DIR}/view/include/*.h)
-FILE(GLOB DX_HEADER_FILES 	     	${CMAKE_SOURCE_DIR}/dxLayer/include/*.h)
+FILE(GLOB IO_HEADER_FILES           ${CMAKE_SOURCE_DIR}/io/include/*.h)
+FILE(GLOB LIGHTS_HEADER_FILES       ${CMAKE_SOURCE_DIR}/lights/include/*.h)
+FILE(GLOB GLSL_SHADER_FILES         ${CMAKE_SOURCE_DIR}/shading/shaders/glsl/*)
+FILE(GLOB HLSL_SHADER_FILES         ${CMAKE_SOURCE_DIR}/shading/shaders/hlsl/*)
+FILE(GLOB VIEW_HEADER_FILES         ${CMAKE_SOURCE_DIR}/view/include/*.h)
+FILE(GLOB DX_HEADER_FILES           ${CMAKE_SOURCE_DIR}/dxLayer/include/*.h)
 
 FILE(GLOB MODEL_SRC_FILES           ${CMAKE_SOURCE_DIR}/model/src/*.cpp)
 FILE(GLOB PHYSICS_SRC_FILES         ${CMAKE_SOURCE_DIR}/physics/src/*.cpp)
 FILE(GLOB SHADING_SRC_FILES         ${CMAKE_SOURCE_DIR}/shading/src/*.cpp)
-FILE(GLOB GL_SRC_FILES    	        ${CMAKE_SOURCE_DIR}/glLayer/src/*)
+FILE(GLOB GL_SRC_FILES              ${CMAKE_SOURCE_DIR}/glLayer/src/*)
 FILE(GLOB AUDIO_SRC_FILES           ${CMAKE_SOURCE_DIR}/audio/src/*.cpp)
 FILE(GLOB DRAWBUFFERS_SRC_FILES     ${CMAKE_SOURCE_DIR}/drawbuffers/src/*.cpp)
 FILE(GLOB ENGINE_SRC_FILES          ${CMAKE_SOURCE_DIR}/engine/src/*.cpp)
@@ -67,69 +67,69 @@ FILE(GLOB LIGHTS_SRC_FILES          ${CMAKE_SOURCE_DIR}/lights/src/*.cpp)
 FILE(GLOB VIEW_SRC_FILES            ${CMAKE_SOURCE_DIR}/view/src/*.cpp)
 FILE(GLOB DX_SRC_FILES              ${CMAKE_SOURCE_DIR}/dxLayer/src/*.cpp)
 
-source_group("model"         FILES 	${MODEL_HEADER_FILES} ${MODEL_SRC_FILES})
-source_group("physics"       FILES 	${PHYSICS_HEADER_FILES} ${PHYSICS_SRC_FILES})
-source_group("shading"       FILES 	${SHADING_HEADER_FILES} ${SHADING_SRC_FILES})
-source_group("gl"            FILES 	${GL_HEADER_FILES} ${GL_SRC_FILES})
-source_group("audio"         FILES 	${AUDIO_HEADER_FILES} ${AUDIO_SRC_FILES})
-source_group("drawbuffers"   FILES 	${DRAWBUFFERS_HEADER_FILES} ${DRAWBUFFERS_SRC_FILES})
-source_group("engine"        FILES 	${ENGINE_HEADER_FILES} ${ENGINE_SRC_FILES})
-source_group("math"          FILES 	${MATH_HEADER_FILES} ${MATH_SRC_FILES})
-source_group("procedural"    FILES 	${PROCEDURAL_HEADER_FILES} ${PROCEDURAL_SRC_FILES})
-source_group("renderer"      FILES 	${RENDERER_HEADER_FILES} ${RENDERER_SRC_FILES})
-source_group("effects"       FILES 	${EFFECTS_HEADER_FILES} ${EFFECTS_SRC_FILES})
-source_group("texture"       FILES 	${TEXTURE_HEADER_FILES} ${TEXTURE_SRC_FILES})
-source_group("io"            FILES 	${IO_HEADER_FILES} ${IO_SRC_FILES})
-source_group("lights"        FILES 	${LIGHTS_HEADER_FILES} ${LIGHTS_SRC_FILES})
-source_group("shaders/glsl"  FILES 	${GLSL_SHADER_FILES})
-source_group("shaders/hlsl"  FILES 	${HLSL_SHADER_FILES})
-source_group("view"          FILES 	${VIEW_HEADER_FILES} ${VIEW_SRC_FILES})
-source_group("dx"            FILES 	${DX_HEADER_FILES} ${DX_SRC_FILES})
+source_group("model"         FILES  ${MODEL_HEADER_FILES} ${MODEL_SRC_FILES})
+source_group("physics"       FILES  ${PHYSICS_HEADER_FILES} ${PHYSICS_SRC_FILES})
+source_group("shading"       FILES  ${SHADING_HEADER_FILES} ${SHADING_SRC_FILES})
+source_group("glLayer"       FILES  ${GL_HEADER_FILES} ${GL_SRC_FILES})
+source_group("audio"         FILES  ${AUDIO_HEADER_FILES} ${AUDIO_SRC_FILES})
+source_group("drawbuffers"   FILES  ${DRAWBUFFERS_HEADER_FILES} ${DRAWBUFFERS_SRC_FILES})
+source_group("engine"        FILES  ${ENGINE_HEADER_FILES} ${ENGINE_SRC_FILES})
+source_group("math"          FILES  ${MATH_HEADER_FILES} ${MATH_SRC_FILES})
+source_group("procedural"    FILES  ${PROCEDURAL_HEADER_FILES} ${PROCEDURAL_SRC_FILES})
+source_group("renderer"      FILES  ${RENDERER_HEADER_FILES} ${RENDERER_SRC_FILES})
+source_group("effects"       FILES  ${EFFECTS_HEADER_FILES} ${EFFECTS_SRC_FILES})
+source_group("texture"       FILES  ${TEXTURE_HEADER_FILES} ${TEXTURE_SRC_FILES})
+source_group("io"            FILES  ${IO_HEADER_FILES} ${IO_SRC_FILES})
+source_group("lights"        FILES  ${LIGHTS_HEADER_FILES} ${LIGHTS_SRC_FILES})
+source_group("shaders/glsl"  FILES  ${GLSL_SHADER_FILES})
+source_group("shaders/hlsl"  FILES  ${HLSL_SHADER_FILES})
+source_group("view"          FILES  ${VIEW_HEADER_FILES} ${VIEW_SRC_FILES})
+source_group("dxLayer"       FILES  ${DX_HEADER_FILES} ${DX_SRC_FILES})
 
 add_executable(manawar-engine
                 ${MODEL_SRC_FILES}
                 ${PHYSICS_SRC_FILES}
                 ${SHADING_SRC_FILES}
                 ${GL_HEADER_FILES}
-				${GL_SRC_FILES}
+                ${GL_SRC_FILES}
                 ${AUDIO_SRC_FILES}
                 ${MODEL_HEADER_FILES}
                 ${PHYSICS_HEADER_FILES}
                 ${SHADING_HEADER_FILES}
                 ${AUDIO_HEADER_FILES}
-				${DRAWBUFFERS_HEADER_FILES} 
-				${DRAWBUFFERS_SRC_FILES}
-				${ENGINE_HEADER_FILES}
-				${ENGINE_SRC_FILES}
-				${MATH_HEADER_FILES}
-				${MATH_SRC_FILES}
-				${PROCEDURAL_HEADER_FILES}
-				${PROCEDURAL_SRC_FILES}
-				${RENDERER_HEADER_FILES} 
-				${RENDERER_SRC_FILES}
-				${EFFECTS_HEADER_FILES} 
-				${EFFECTS_SRC_FILES}
-				${TEXTURE_HEADER_FILES}
-				${TEXTURE_SRC_FILES}
-				${IO_HEADER_FILES}
-				${IO_SRC_FILES}
-				${LIGHTS_HEADER_FILES}
-				${LIGHTS_SRC_FILES}
-				${GLSL_SHADER_FILES}
-				${HLSL_SHADER_FILES}
-				${VIEW_HEADER_FILES}
-				${VIEW_SRC_FILES}
-				${DX_HEADER_FILES}
-				${DX_SRC_FILES})
+                ${DRAWBUFFERS_HEADER_FILES} 
+                ${DRAWBUFFERS_SRC_FILES}
+                ${ENGINE_HEADER_FILES}
+                ${ENGINE_SRC_FILES}
+                ${MATH_HEADER_FILES}
+                ${MATH_SRC_FILES}
+                ${PROCEDURAL_HEADER_FILES}
+                ${PROCEDURAL_SRC_FILES}
+                ${RENDERER_HEADER_FILES} 
+                ${RENDERER_SRC_FILES}
+                ${EFFECTS_HEADER_FILES} 
+                ${EFFECTS_SRC_FILES}
+                ${TEXTURE_HEADER_FILES}
+                ${TEXTURE_SRC_FILES}
+                ${IO_HEADER_FILES}
+                ${IO_SRC_FILES}
+                ${LIGHTS_HEADER_FILES}
+                ${LIGHTS_SRC_FILES}
+                ${GLSL_SHADER_FILES}
+                ${HLSL_SHADER_FILES}
+                ${VIEW_HEADER_FILES}
+                ${VIEW_SRC_FILES}
+                ${DX_HEADER_FILES}
+                ${DX_SRC_FILES})
 
 target_compile_features(manawar-engine PRIVATE cxx_range_for)
 
 if (MSVC)
-	set(VS_STARTUP_Project manawar-engine)
-	add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+    set(VS_STARTUP_Project manawar-engine)
+    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
     add_definitions("/MP")
-	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS")
-	set_source_files_properties(${HLSL_SHADER_FILES} PROPERTIES VS_TOOL_OVERRIDE "None")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS")
+    set_source_files_properties(${HLSL_SHADER_FILES} PROPERTIES VS_TOOL_OVERRIDE "None")
 endif()
 
 target_link_libraries(manawar-engine           legacy_stdio_definitions.lib)
@@ -141,21 +141,21 @@ target_link_libraries(manawar-engine           ${CMAKE_SOURCE_DIR}/libs/fmod/lib
 
 #pre fetches assets and dependencies during cmake -G configuration
 FetchContent_Populate(data
-					  URL        https://www.dropbox.com/s/9h8h3nvwk1gxyaw/data.zip?dl=0
-					  URL_HASH   MD5=24bc3ac2cd656569db2f7b64cbc47088
-					  SOURCE_DIR data)
+                      URL        https://www.dropbox.com/s/9h8h3nvwk1gxyaw/data.zip?dl=0
+                      URL_HASH   MD5=24bc3ac2cd656569db2f7b64cbc47088
+                      SOURCE_DIR data)
 
-#Copy over the contents of the unzipped folder					  
+#Copy over the contents of the unzipped folder                    
 file(COPY ${CMAKE_SOURCE_DIR}/build/data/ DESTINATION ${CMAKE_SOURCE_DIR})
 #delete the contents after moving
 file(REMOVE_RECURSE ${CMAKE_SOURCE_DIR}/build/data/)
 
 #dxil and dxcompiler dlls are needed for dxr
 add_custom_command(TARGET manawar-engine POST_BUILD
-				   COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/libs/freeimage/lib/FreeImage.dll $<TARGET_FILE_DIR:manawar-engine>
-				   COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/libs/fmod/lib/fmod64.dll 		 $<TARGET_FILE_DIR:manawar-engine> 
-				   COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/libs/dx/lib/dxcompiler.dll       $<TARGET_FILE_DIR:manawar-engine>
-				   COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/libs/dx/lib/dxil.dll			 $<TARGET_FILE_DIR:manawar-engine>)
+                   COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/libs/freeimage/lib/FreeImage.dll $<TARGET_FILE_DIR:manawar-engine>
+                   COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/libs/fmod/lib/fmod64.dll         $<TARGET_FILE_DIR:manawar-engine> 
+                   COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/libs/dx/lib/dxcompiler.dll       $<TARGET_FILE_DIR:manawar-engine>
+                   COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/libs/dx/lib/dxil.dll             $<TARGET_FILE_DIR:manawar-engine>)
 
 install(TARGETS manawar-engine RUNTIME DESTINATION bin)
 install(FILES "${CMAKE_SOURCE_DIR}/libs/freeimage/lib/FreeImage.dll"
@@ -167,4 +167,4 @@ install(DIRECTORY "${CMAKE_SOURCE_DIR}/shading/shaders/"
         DESTINATION shading/shaders)
 install(DIRECTORY "${CMAKE_SOURCE_DIR}/assets/"
         DESTINATION assets)
-		
+        
