Phase 1 of prodecural terrain generation
The goal is to define a set of rules that influences the basic topology of a game world using procedural generation and then go back to hand edit the world.  This will make game editing much faster and manageable.  Updated data zip folder via dropbox.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,8 +141,8 @@ target_link_libraries(manawar-engine           ${CMAKE_SOURCE_DIR}/libs/fmod/lib
 
 #pre fetches assets and dependencies during cmake -G configuration
 FetchContent_Populate(data
-                      URL        https://www.dropbox.com/s/9h8h3nvwk1gxyaw/data.zip?dl=0
-                      URL_HASH   MD5=24bc3ac2cd656569db2f7b64cbc47088
+                      URL        https://www.dropbox.com/s/3lcw7rxf6ej6jsv/data1.0.zip?dl=0
+                      URL_HASH   MD5=fd8742f259fcc4ab70aa6b79a3dfcc7a
                       SOURCE_DIR data)
 
 #Copy over the contents of the unzipped folder                    
